manifest/objects/LVGO__OpportunityLineItem__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__Bypass_Sales_Price_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Sales Price Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Create_MsC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create MsC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Currently_Enrolled_Members__c</fullName>
        <description>JENGA:1589: WP Transition. This field will have the existing enrolled program participants</description>
        <inlineHelpText>Please refer to the ipos daily snapshot email.</inlineHelpText>
        <label>Currently Enrolled Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Disable_BH_Coaching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable BH Coaching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Disable_Teletherapy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Teletherapy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Discount__c</fullName>
        <label>Discount</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Enrollment_Percentage__c</fullName>
        <label>Enrollment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Estimated_At_Risk_PPPM__c</fullName>
        <label>Estimated At-Risk PPPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Estimated_Partner_Admin_Fees__c</fullName>
        <label>Estimated Partner Admin Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Exclude_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JENGA-1465</description>
        <inlineHelpText>Do not use this field unless this is either a renewal opportunity, or a Whole Person Solution upgrade of an existing client to the Whole Person Solution of that product. Ex. Current DM customer is upgrading to DM 360</inlineHelpText>
        <label>Exclude Enrollment %</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Fee_Type__c</fullName>
        <formula>IF(CONTAINS(LVGO__Pricing_Structure__r.Name, &apos;PEPM&apos;), &apos;PEPM&apos;,
			IF(CONTAINS(LVGO__Pricing_Structure__r.Name, &apos;PMPM&apos;), &apos;PMPM&apos;,
			&apos;PPPM&apos;))</formula>
        <label>Fee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Gross_Program_ARR_Copy__c</fullName>
        <label>Gross Program ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Gross_Program_ARR__c</fullName>
        <description>THIS SHOULD NOT BE USED</description>
        <formula>CASE(
    LVGO__Program_Family__c,

    &apos;Diabetes&apos;, IF(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), (0.25 * LVGO__Product_Participants__c * (LVGO__UnitPrice__c * 12)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12,
                (0.20 * LVGO__Product_Participants__c * (LVGO__UnitPrice__c * 12)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12),
    
    &apos;Hypertension&apos;, IF(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), (0.10 * LVGO__Product_Participants__c * (LVGO__UnitPrice__c * 12)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12,
                    (0.08 * LVGO__Product_Participants__c * (LVGO__UnitPrice__c * 12)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12),

    &apos;Weight Management&apos;, IF(AND(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), LVGO__UnitPrice__c == 1.00), 608 * LVGO__Product_Participants__c * 0.10,
                         IF(LVGO__UnitPrice__c == 1.00, 608 * LVGO__Product_Participants__c * 0.08,
                         IF(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), 0.10 * LVGO__Product_Participants__c * LVGO__UnitPrice__c * 12 + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12,
                         0.08 * LVGO__Product_Participants__c * LVGO__UnitPrice__c * 12 + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12))),
    
    &apos;Prediabetes&apos;, IF(AND(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), LVGO__UnitPrice__c == 1.00), 608 * LVGO__Product_Participants__c * 0.10,
                    IF(LVGO__UnitPrice__c == 1.00, 608 * LVGO__Product_Participants__c * 0.08,
                    IF(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), 0.10 * LVGO__Product_Participants__c * LVGO__UnitPrice__c * 12 + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12,
                    0.08 * LVGO__Product_Participants__c * LVGO__UnitPrice__c * 12 + LVGO__Currently_Enrolled_Members__c* LVGO__Incremental_Sales_Price__c * 12))),

    LVGO__Product_Participants__c * LVGO__UnitPrice__c * 12 + LVGO__Product_Participants__c * 0.02 * LVGO__PMPM__c * 6
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Program ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Gross_Program_TCV_Copy__c</fullName>
        <description>Renamed to EVA - JENGA-1540</description>
        <label>Gross Program EVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Gross_Program_TCV__c</fullName>
        <formula>CASE(LVGO__Program_Family__c,
        &apos;Diabetes&apos;, LVGO__Product_Participants__c * 0.25 * LVGO__UnitPrice__c * LVGO__Quantity__c + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * LVGO__Quantity__c,
        &apos;Hypertension&apos;, LVGO__Product_Participants__c * 0.10 * LVGO__UnitPrice__c * LVGO__Quantity__c + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * LVGO__Quantity__c,
        &apos;Weight Management&apos;, IF(LVGO__UnitPrice__c == 1.00,
                                (500 * LVGO__Product_Participants__c * 0.10 + LVGO__Product_Participants__c * 0.10 * LVGO__Year_2_Price__c * MAX(LVGO__Quantity__c - 12, 0)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * LVGO__Quantity__c,
                                (LVGO__Product_Participants__c * 0.10 * LVGO__UnitPrice__c * 12 + LVGO__Product_Participants__c * 0.10 * LVGO__Year_2_Price__c * MAX(LVGO__Quantity__c - 12, 0)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * LVGO__Quantity__c ),
        &apos;Prediabetes&apos;, IF(LVGO__UnitPrice__c == 1.00,
                            (500 * LVGO__Product_Participants__c * 0.10 + LVGO__Product_Participants__c * 0.10 * LVGO__Year_2_Price__c * MAX(LVGO__Quantity__c - 12, 0)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * LVGO__Quantity__c,
                            (LVGO__Product_Participants__c * 0.10 * LVGO__UnitPrice__c * 12 + LVGO__Product_Participants__c * 0.10 * LVGO__Year_2_Price__c * MAX(LVGO__Quantity__c - 12, 0)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * LVGO__Quantity__c ),
        LVGO__Product_Participants__c * LVGO__UnitPrice__c * LVGO__Quantity__c + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * LVGO__Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Program EVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Incremental_Sales_Price__c</fullName>
        <description>JENGA-1589: WP transitions, this field will capture the the delta between the new sales price and standalone sales price</description>
        <inlineHelpText>The delta between the new WP Sales Price and Standalone Sales Price</inlineHelpText>
        <label>Incremental Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__IntegrateProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked (the default), this field signals to both Redshift and NetSuite that this Program is to be integrated.  When unchecked, neither Redshift nor Netsuite will sync this Program. If an Opportunity with a Program is added to a Contract with an existing Opportunity and matching Program (Renewals, Expansions), UNCHECK this field on the OLD Opportunity Program.</description>
        <inlineHelpText>Checked by default.  When checked, will sync with Redshift &amp; Netsuite.  If an Opportunity with a Program is added to a Contract with an existing Opportunity and matching Program (Renewals, Expansions), UNCHECK this field on the OLD Opportunity Program.</inlineHelpText>
        <label>Integrate Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__ListPrice__c</fullName>
        <label>List Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Migrated_myStrength_OLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated myStrength OLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Net_Program_TCV_Copy__c</fullName>
        <label>Net Program TCV Copy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Net_Program_TCV__c</fullName>
        <description>Not Used - JENGA-1540</description>
        <formula>IF(AND(LVGO__Program_Family__c == &apos;Behavioral Health&apos;, NOT(LVGO__Exclude_Enrollment__c)), (LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * LVGO__Quantity__c + LVGO__Up_Front_Per_Member__c) +
((LVGO__Product_Participants__c * 0.02) * LVGO__PMPM__c * LVGO__Quantity__c / 2)),
IF(AND(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), OR(LVGO__Program_Family__c == &apos;Prediabetes&apos;, LVGO__Program_Family__c == &apos;Weight Management&apos;), LVGO__UnitPrice__c == 1.00, NOT(LVGO__Exclude_Enrollment__c)), (608.00 * (LVGO__Product_Participants__c * 0.10) * LVGO__Quantity__c / 12 ),
IF(AND(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Health Servic&apos;), OR(LVGO__Program_Family__c == &apos;Prediabetes&apos;, LVGO__Program_Family__c == &apos;Weight Management&apos;), LVGO__UnitPrice__c == 1.00, NOT(LVGO__Exclude_Enrollment__c)), (608.00 * (LVGO__Product_Participants__c * 0.08) * LVGO__Quantity__c /12),
IF(AND(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), LVGO__Program_Family__c == &apos;Diabetes&apos;, NOT(LVGO__Exclude_Enrollment__c)), (0.25 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * LVGO__Quantity__c + LVGO__Up_Front_Per_Member__c)),
IF(AND(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), NOT(LVGO__Program_Family__c == &apos;Diabetes&apos;), NOT(LVGO__Exclude_Enrollment__c)), (0.1 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * LVGO__Quantity__c + LVGO__Up_Front_Per_Member__c)),
IF(AND(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Health Servic&apos;), LVGO__Program_Family__c == &apos;Diabetes&apos;, NOT(LVGO__Exclude_Enrollment__c)), (0.2 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * LVGO__Quantity__c + LVGO__Up_Front_Per_Member__c)),
IF(AND(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Health Servic&apos;), NOT(LVGO__Program_Family__c == &apos;Diabetes&apos;), NOT(LVGO__Exclude_Enrollment__c)), (0.08 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * LVGO__Quantity__c + LVGO__Up_Front_Per_Member__c)),
(LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * LVGO__Quantity__c + LVGO__Up_Front_Per_Member__c))
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Program TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__OpportunityProductName__c</fullName>
        <label>Opportunity Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity_GUID__c</fullName>
        <formula>LVGO__Opportunity__r.LVGO__TD_Opp_Guid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity_Owner_Role__c</fullName>
        <label>Opportunity Owner Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity_Product_ID__c</fullName>
        <formula>Id</formula>
        <label>Opportunity Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity_Type__c</fullName>
        <formula>TEXT(LVGO__Opportunity__r.LVGO__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>LVGO__Opportunity__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>LGVO_OpportunityProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LVGO__Owner_of_Opportunity__c</fullName>
        <formula>LVGO__Opportunity__r.LVGO__Owner__r.FirstName &amp;&quot; &quot;&amp; LVGO__Opportunity__r.LVGO__Owner__r.LastName</formula>
        <label>Owner of Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__PMPM__c</fullName>
        <description>JENGA-1357</description>
        <inlineHelpText>Only used for BH 2.0 product</inlineHelpText>
        <label>PMPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__PO_WholePerson__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If 1, then the OLI is Whole Person. Updated by workflow rule</description>
        <label>PO#_WholePerson</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Price_Book_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book ID</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Opportunity Program</relationshipLabel>
        <relationshipName>LVGO_Opportunity_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Pricing_Structure__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Updating Pricing Structure will overwrite the Sales Price, Estimated At-Risk PPPM, Estimated Partner Admin Fees, and Up Front Per Member fields.</inlineHelpText>
        <label>Pricing Structure</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Pricing Structure is not available.</errorMessage>
            <filterItems>
                <field>LVGO__Pricing_Structure__c.LVGO__Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.LVGO__Program_ID__c</valueField>
            </filterItems>
            <filterItems>
                <field>LVGO__Pricing_Structure__c.LVGO__Price_Book__c</field>
                <operation>equals</operation>
                <valueField>$Source.LVGO__Price_Book_ID__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LVGO__Pricing_Structure__c</referenceTo>
        <relationshipLabel>Opportunity Program</relationshipLabel>
        <relationshipName>LVGO_Opportunity_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity LineItems</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__ProductCode__c</fullName>
        <formula>LVGO__Product2__r.ProductCode</formula>
        <label>Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__ProductRecordType__c</fullName>
        <description>Record type of the Program (e.g. Livongo for Diabetes is a &apos;Primary&apos; program; Livongo for Diabetes - Upfront Meter is a &apos;Secondary&apos; program).</description>
        <formula>LVGO__Product2__r.RecordType.DeveloperName</formula>
        <inlineHelpText>Record type of the Program (e.g. Livongo for Diabetes is a &apos;Primary&apos; program; Livongo for Diabetes - Upfront Meter is a &apos;Secondary&apos; program).</inlineHelpText>
        <label>Product Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Product_Participants__c</fullName>
        <inlineHelpText>For new opportunities, enter estimated recruitables or rPwX. For renewals, enter enrolled members.</inlineHelpText>
        <label>Program Participants (rPwX or Enrolled)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Product_Record_Type__c</fullName>
        <label>Product Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Product_Rollup__c</fullName>
        <label>Product Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_ARR_Copy__c</fullName>
        <description>Workflow field update will populate this field with the value from Program ARR; this field will then be rolled up into value on Opportunity</description>
        <label>Net Program ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_ARR__c</fullName>
        <formula>CASE(
LVGO__Program_Family__c,

&apos;Diabetes&apos;, IF(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), (0.25 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * 12 + LVGO__Up_Front_Per_Member__c)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12,
(0.20 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * 12 + LVGO__Up_Front_Per_Member__c)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12),

&apos;Hypertension&apos;, IF(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), (0.10 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * 12 + LVGO__Up_Front_Per_Member__c)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12,
(0.08 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * 12 + LVGO__Up_Front_Per_Member__c)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12),

&apos;Weight Management&apos;, IF(AND(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), LVGO__UnitPrice__c == 1.00), 608 * LVGO__Product_Participants__c * 0.10,
IF(LVGO__UnitPrice__c == 1.00, 608 * LVGO__Product_Participants__c * 0.08,
IF(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), (0.10 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * 12 + LVGO__Up_Front_Per_Member__c)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12,
(0.08 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * 12 + LVGO__Up_Front_Per_Member__c)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12))),

&apos;Prediabetes&apos;, IF(AND(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), LVGO__UnitPrice__c == 1.00), 608 * LVGO__Product_Participants__c * 0.10,
IF(LVGO__UnitPrice__c == 1.00, 608 * LVGO__Product_Participants__c * 0.08,
IF(CONTAINS(LVGO__Opportunity__r.LVGO__Opp_Owner_Role__c, &apos;Commercial&apos;), (0.10 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * 12 + LVGO__Up_Front_Per_Member__c)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12,
(0.08 * LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * 12 + LVGO__Up_Front_Per_Member__c)) + LVGO__Currently_Enrolled_Members__c * LVGO__Incremental_Sales_Price__c * 12))),

(LVGO__Product_Participants__c * ((LVGO__UnitPrice__c - (LVGO__Estimated_At_Risk_PPPM__c + LVGO__Estimated_Partner_Admin_Fees__c)) * 12 + LVGO__Up_Front_Per_Member__c)) + LVGO__Product_Participants__c * 0.02 * LVGO__PMPM__c * 6
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Program ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Family__c</fullName>
        <formula>TEXT(LVGO__Product2__r.Family)</formula>
        <label>Program Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Program</relationshipLabel>
        <relationshipName>LVGO_Opportunity_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Rev_Synergy_Flag__c</fullName>
        <label>Program Rev Synergy Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Synergy</fullName>
                </value>
                <value>
                    <fullName>Combined TD/LV Solution (MH)</fullName>
                </value>
                <value>
                    <fullName>Cross-sell TD Products into LV</fullName>
                </value>
                <value>
                    <fullName>Cross-sell LV Products into TD</fullName>
                </value>
                <value>
                    <fullName>Cross-sell LV to HHS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Program__c</fullName>
        <formula>HYPERLINK( LVGO__Opportunity_Product_ID__c , LVGO__Product2__r.Name, &quot;_self&quot;)</formula>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Quantity__c</fullName>
        <label>Program Term</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Recalculate_ARR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate ARR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Sales_Commissionable_Price__c</fullName>
        <description>Price used for commission considerations, not for billing</description>
        <label>Sales Commissionable Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__ServiceDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Source_id__c</fullName>
        <label>Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__TD_PREPROD_Product_Id__c</fullName>
        <formula>LVGO__Product2__r.LVGO__TD_PREPROD_Product_Id__c</formula>
        <label>TD PREPROD Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__TD_PROD_Product_Id__c</fullName>
        <formula>LVGO__Product2__r.LVGO__TD_PROD_Product_Id__c</formula>
        <label>TD PROD Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__TotalPrice__c</fullName>
        <label>TotalPrice</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__UnitPrice__c</fullName>
        <inlineHelpText>For all Whole Person opportunities, input the Whole Person PPPM for the solution. Do not input the incremental sales price. To capture a Whole Person upgrade populate the section below titled &apos;Whole Person Upgrade</inlineHelpText>
        <label>Sales Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Up_Front_Per_Member__c</fullName>
        <label>Up Front Per Member</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Year_2_Price__c</fullName>
        <description>This is the year 2+ maintenance price. This currently only applies to Weight Management/Diabetes Prevention</description>
        <inlineHelpText>This is the year 2+ maintenance price. This currently only applies to Weight Management/Diabetes Prevention. You need to enter this in order for the DPP ROI model to properly populate</inlineHelpText>
        <label>Year 2+ Price</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>LV Opportunity Program</label>
    <listViews>
        <fullName>LVGO__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV OpportunityLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LVGO__Cannot_Change_Price_without_Structure</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
            ISCHANGED( LVGO__UnitPrice__c ),
            ISBLANK( LVGO__Pricing_Structure__c ),
            $Setup.LVGO__LVGO_Automation_Switch__c.LVGO__Validations__c
        )</errorConditionFormula>
        <errorMessage>Please add a Pricing Structure to update the sales price</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LVGO__Cannot_Edit_TD_Opportunity_Program</fullName>
        <active>true</active>
        <description>Cannot edit TD Opportunity Programs.</description>
        <errorConditionFormula>AND(ISPICKVAL(LVGO__Opportunity__r.LVGO__Source__c,&apos;TD&apos;),
                    NOT($Permission.LVGO__Edit_TD_Opportunity_Program),
                    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
                    OR(ISCHANGED(LVGO__Product_Participants__c),
                    ISCHANGED(LVGO__UnitPrice__c),
                    ISCHANGED(LVGO__Quantity__c ),
                    ISCHANGED(LVGO__Pricing_Structure__c),
                    ISCHANGED(LVGO__Estimated_Partner_Admin_Fees__c),
                    ISCHANGED(LVGO__Estimated_At_Risk_PPPM__c),
                    ISCHANGED(LVGO__Up_Front_Per_Member__c)),
                    $Setup.LVGO__LVGO_Automation_Switch__c.LVGO__Validations__c)</errorConditionFormula>
        <errorMessage>You are not allowed to update TD Opportunity Program in LVN, please make the update in TD Instance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LVGO__Disable_BH_Coaching_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
                    LVGO__Disable_BH_Coaching__c,
                    NOT( CONTAINS(LVGO__Product2__r.Name, &apos;Behavioral Health&apos;)) ,
                    $Setup.LVGO__LVGO_Automation_Switch__c.LVGO__Validations__c
        )</errorConditionFormula>
        <errorMessage>This check can be checked once Behavioral Health is added.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LVGO__Disable_Teletherapy_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
                    LVGO__Disable_Teletherapy__c,
                    LVGO__Product2__r.Name != &apos;myStrength Complete&apos;,
                    LVGO__Product2__r.Name != &apos;Livongo for Behavioral Health by myStrength 2.0&apos;,
                    NOT(CONTAINS(LVGO__Product2__r.Name, &apos;Solution&apos;)),
                    $Setup.LVGO__LVGO_Automation_Switch__c.LVGO__Validations__c
        )</errorConditionFormula>
        <errorMessage>This check box can be checked only for Whole Person Solution Programs, myStrength Complete and Livongo for Behavioral Health by myStrength 2.0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LVGO__Initial_Price_must_be_0</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
            ISNEW(),
            LVGO__UnitPrice__c != 0,
            $Setup.LVGO__LVGO_Automation_Switch__c.LVGO__Validations__c
            )</errorConditionFormula>
        <errorMessage>Initial Sales Price must be 0. Please use the lookup &quot;Pricing Structure&quot; to alter this Sales price. Prices can be updated after creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LVGO__PMPM_only_for_BH_Product</fullName>
        <active>true</active>
        <description>PMPM rate can only be edited for BH 2.0 product</description>
        <errorConditionFormula>AND($Setup.LVGO__LVGO_Automation_Switch__c.LVGO__Validations__c,ISCHANGED(LVGO__PMPM__c), 
            NOT(ISPICKVAL(LVGO__Product2__r.Family, &apos;Behavioral Health&apos;)))</errorConditionFormula>
        <errorDisplayField>LVGO__PMPM__c</errorDisplayField>
        <errorMessage>PMPM should only be entered for Behavioral Health products</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LVGO__WP_Programs_Pricing_Must_be_in_Range</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.LVGO__LVGO_Automation_Switch__c.LVGO__Validations__c,NOT(LVGO__Bypass_Sales_Price_Validation__c), !ISNEW(), ISCHANGED(LVGO__UnitPrice__c), LVGO__Opportunity_Type__c != &apos;Renewal&apos;,
            OR(
            AND(
            LVGO__Product2__r.Name = &apos;DM Solution&apos;,
            IF( LVGO__UnitPrice__c &gt; 107, TRUE,IF(LVGO__UnitPrice__c &lt; 76, TRUE, IF(LVGO__UnitPrice__c &lt; 95, IF(LVGO__UnitPrice__c &gt; 85, TRUE, FALSE), FALSE)))
            ),
            AND(
            LVGO__Product2__r.Name = &apos;CV Solution&apos;,
            IF(LVGO__UnitPrice__c &lt; 55, TRUE, IF(LVGO__UnitPrice__c &gt; 85, TRUE, IF(LVGO__UnitPrice__c &gt; 60, IF(LVGO__UnitPrice__c &lt; 76, TRUE, FALSE),FALSE)))
            ),
            AND(
            LVGO__Product2__r.Name = &apos;DP Solution&apos;,
            IF(LVGO__UnitPrice__c &lt; 73, TRUE, IF(LVGO__UnitPrice__c &gt; 85, TRUE, FALSE))
            )
            )
            )</errorConditionFormula>
        <errorDisplayField>LVGO__UnitPrice__c</errorDisplayField>
        <errorMessage>You&apos;re attempting to update the Sales Price outside of the defined range for this program.</errorMessage>
    </validationRules>
</CustomObject>